# DeepSolo

./: __requirements.txt  pyproject.toml  requirements.txt  setup.py
adet/modeling/: text_spotter.py
adet/modeling/model/: detection_transformer.py  utils.py
adet/utils/: visualizer.py
deepsolo_onnx/: __init__.py
deepsolo_onnx/adet/default_config/: __init__.py
deepsolo_onnx/adet/layers/: deformable_transformer.py  ms_deform_attn.py
deepsolo_onnx/adet/modeling/: __init__.py
deepsolo_onnx/adet/modeling/model/: detection_transformer.py  matcher.py
deepsolo_onnx/adet/modeling/vitae_v2/: vitae_v2.py
deepsolo_onnx/lib/: __init__.py  detector.py  losses.py  pos_encoding.py  swin_transformer.py  vitaev2.py
deepsolo_onnx/lib/checkpointer/: __init__.py  c2_model_loading.py  checkpointer.py
deepsolo_onnx/lib/config/: config.py
deepsolo_onnx/lib/utils/: __init__.py  comm.py  data.py  visualizer.py
deepsolo_onnx/lib/vitaev2/: NormalCell.py  ReductionCell.py  __init__.py  backbone.py  token_performer.py  vitaev2.py
demo/: predictor.py
