[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[tool.poetry]
name = "deepsolo_onnx"
version = "0.0.1"
description = "A stripped down version of the original DeepSolo model's codebase, with most dependencies removed or repackaged separately"
authors = ["Alex Goryunov"]
url = "https://github.com/agoryuno/deepsolo_onnx"

[tool.poetry.dependencies]
python = "^3.10 || ^3.11"

[tool.poetry.extras]
all = ["psutil"]

[tool.poetry.dependencies.adet_layers]
url = "https://github.com/agoryuno/adet_layers/raw/main/wheels/adet_layers-0.0.1-cp310-linux_x86_64.whl"

[tool.poetry.dependencies.adet_layers.condition]
python = "3.11"
url = "https://github.com/agoryuno/adet_layers/raw/main/wheels/adet_layers-0.0.1-cp311-linux_x86_64.whl"
